--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ test:
 production:
   adapter: mysql2
   username: root
-  password: AgelMora123
+  password: AngelMora123
   database: tiendus_db
   host: 127.0.0.1
   port: 3306
